--- a/src/pages/Dashboard/Content/DashboardContent.scss
+++ b/src/pages/Dashboard/Content/DashboardContent.scss
@@ -3,16 +3,13 @@
   flex-wrap: nowrap;
   height: 100%;
   width: 100%;
-  background: red;
 }
 //kek
-.toDo,
+.inProgress,
 .done,
 .backlog {
   display: flex;
   flex-wrap: nowrap;
-  background: green;
-  border: 1px solid yellow;
   width: 100%;
   flex-direction: column;
   padding: 20px;
@@ -22,4 +19,11 @@
 }
 .editor-card {
   margin-top: 5px !important;
+  margin-bottom: 5px !important;
+}
+.my-card,
+.editor-card {
+  box-shadow: 1px 2px 17px 2px rgba(0, 0, 0, 0.23);
+  -webkit-box-shadow: 1px 2px 17px 2px rgba(0, 0, 0, 0.23);
+  -moz-box-shadow: 1px 2px 17px 2px rgba(0, 0, 0, 0.23);
 }
