--- a/src/pages/Dashboard/Content/DashboardContent.scss
+++ b/src/pages/Dashboard/Content/DashboardContent.scss
@@ -1,6 +1,7 @@
 .dashboard-content-section {
   display: flex;
   flex-wrap: nowrap;
+  overflow-y: scroll;
   height: 100%;
   width: 100%;
 }
@@ -23,7 +24,7 @@
 }
 .my-card,
 .editor-card {
-  box-shadow: 1px 2px 17px 2px rgba(0, 0, 0, 0.23);
-  -webkit-box-shadow: 1px 2px 17px 2px rgba(0, 0, 0, 0.23);
-  -moz-box-shadow: 1px 2px 17px 2px rgba(0, 0, 0, 0.23);
+  box-shadow: rgb(15 15 15 / 10%) 0px 0px 0px 1px,
+    rgb(15 15 15 / 10%) 0px 2px 4px;
+  border-radius: 4px;
 }
